--- a/svg/bare_svg/p01_shapes/index.html
+++ b/svg/bare_svg/p01_shapes/index.html
@@ -4,14 +4,12 @@
         <meta charset="utf-8">
         <title></title>
 
+        <link rel="shortcut icon" href="data:;">
         <link rel="stylesheet" href="index.css">
     </head>
     <body>
         <div class="main">
-            <svg width="500" height="500">
-                <circle cx="250" cy="250" r="230"
-                stroke="yellow" stroke-width="40" fill="#440044"/>
-            </svg>
+            <object type="image/svg+xml" data="canvas.svg"></object>
         </div>
     </body>
 </html>
