--- a/svg/bare_svg/p05_filters/index.html
+++ b/svg/bare_svg/p05_filters/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
-        <title>SVG Stroke</title>
+        <title>SVG Filters</title>
 
         <link rel="shortcut icon" href="data:;">
         <link rel="stylesheet" href="index.css">
