--- a/playground/p02_orchestration/index.html
+++ b/playground/p02_orchestration/index.html
@@ -12,7 +12,13 @@
             <button type="button" name="button" class="inactive">Do something</button>
         </div>
         <div class="scene">
-            <object type="image/svg+xml" data="scene.svg" id="sceneObject" width="400px" height="400px"></object>
+            <div class=""></div>
+            <div class="midgrid">
+                <div class="scene-object-wrapper">
+                    <object type="image/svg+xml" data="scene.svg" id="sceneObject" width="100%" height="100%"></object>
+                </div>
+            </div>
+            <div class=""></div>
         </div>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
